Sat Nov 03 20:51:37 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Use -10 to 10 for all default ranges.  Much better
	  than PI, that was stupid.  Set minimum plot window to 1e-10 and
	  enforce it to avoid errors with computing ticks leading to
	  hanging behaviour.

	* gtkextra/*: copy new files from cvs version of gtk extra except
	  for gtkpslot which is broken, so keep our old version which works

	* gtkextra/gtkplot3d.[ch]: fix up the axis mess

	* src/graphing.c: use the new gtk extra stuff.  Produces nicer
	  plots on screen.  Initial patch was by Sebastian Dröge
	  <slomo@circular-chaos.org>

2007-11-03  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.in:
	* src/Makefile.am:
	* src/gnome-genius.c: (get_source_language_manager), (new_program):
	Optionally allow to use GtkSourceView2 instead of GtkSourceView1.
	Version 2 is preffered if available, otherwise version 1 will be used.

2007-11-03  Sebastian Dröge  <slomo@circular-chaos.org>

	* Makefile.am:
	* configure.in:
	* help/omf.make:
	Add --disable-scrollkeeper and --disable-update-mimedb options to
	configure to skip building the scrollkeeper and mime database on
	make install. The files generated by this must not be shipped by
	binary packages and having this options makes it easier to package
	genius.

Wed Oct 31 10:43:25 2007  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/*: remove gtkplotdtriangle.[ch]: they're not needed and
	  have a bad license.

Fri Oct 26 02:16:23 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.[ch], src/eval.[ch], src/genius.c, src/gnome-genius.c:
	  Implement maximum node checking.  If the limit is hit you are
	  given a chance to interrupt the current program.  Only in the
	  GNOME version.  Add this to the Properties dialog.

	* src/dict.c: Fix large performance problem on returning from a deep
	  recursion by not doing a stupid assert

	* help/C/genius.xml: document max_nodes

Thu Oct 25 15:22:16 2007  Jiri (George) Lebl <jirka@5z.com>
