@@ -1,2 +1,7 @@
 SUBDIRS = \
 	32x32 48x48
+
+imagedir = \
+	$(datadir)/genius/
+image_DATA = \
+	genius-graph.png
