@@ -1,3 +1,13 @@
+Sun Nov 04 02:37:58 2007  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: unswap x and y.  They are now in correct positive
+	  orientation in gtkextra.
+
+	* src/gnome-genius.c, pixmaps/gnome-graph.png: add a simple "logo"
+	  to the about box
+
+	* NEWS: update
+
 Sat Nov 03 20:51:37 2007  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: Use -10 to 10 for all default ranges.  Much better
